fluxcd/infrastructure/controllers/base/crowdsec/service-cloudflare-bouncer.yaml
apiVersion: v1
kind: Service
metadata:
  name: crowdsec-cloudflare-bouncer
  labels:
    app: crowdsec-cloudflare-bouncer
    component: bouncer
spec:
  clusterIP: None
  selector:
    app: crowdsec-cloudflare-bouncer
    component: bouncer
  ports:
  - name: metrics
    port: 2112
    targetPort: 2112
    protocol: TCP
