fluxcd/infrastructure/controllers/base/crowdsec/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec-dashboard
spec:
  parentRefs:
  - name: PLACEHOLDER_GATEWAY_NAME
    namespace: king-of-red-lions
  hostnames:
  - "PLACEHOLDER_HOSTNAME"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: crowdsec-dashboard
      port: 3000
